Fixing with stress tester